--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             d="M16.8201 14.0944V7.91833H14.3497V14.0944H8.17358V16.5649H14.3497V22.741H16.8201V16.5649H22.9962V14.0944H16.8201Z"
                             fill="black" />
                     </svg><span class="ps-3">Create Playlist</span></div>
-                <div><svg class="liked_songs rounded-1" xmlns="http://www.w3.org/2000/svg" width="12" height="12"
+                <div ><svg class="liked_songs rounded-1" xmlns="http://www.w3.org/2000/svg" width="12" height="12"
                         viewBox="0 0 12 12" fill="none">
                         <g clip-path="url(#clip0_306_628)">
                             <path
@@ -69,7 +69,7 @@
                                     fill="white" />
                             </clipPath>
                         </defs>
-                    </svg><span class="ps-3">Liked Songs</span></div>
+                    </svg><a href="playlist.html"><span class="ps-3">Liked Songs</span></a></div>
                 <div><svg class="episodes p-2 rounded-1" xmlns="http://www.w3.org/2000/svg" width="31" height="31"
                         viewBox="0 0 20 18" fill="none">
                         <path
@@ -134,7 +134,7 @@
             <section id="title_playlist" class="m-4 p-0">
                 <h2>Good morning</h2>
                 <div class="row ">
-                    <div class="playlist_item col-3 m-2 p-0">
+                    <div class="playlist_item col-12 col-md-6 col-lg-3 d-flex justify-content-left align-items-center m-2 p-0">
                         <svg class="list_image rounded-1" xmlns="http://www.w3.org/2000/svg" width="12" height="12"
                             viewBox="0 0 12 12" fill="none">
                             <g clip-path="url(#clip0_306_628)">
@@ -151,14 +151,14 @@
                             </defs>
                         </svg><span class="ps-3">Liked Songs</span>
                     </div>
-                    <div class="playlist_item col-3 m-2 p-0">
+                    <div class="playlist_item col-12 col-md-6 col-lg-3 d-flex justify-content-left align-items-center m-2 p-0">
                         <img src="./assets/Rectangle 2.png" alt=" Rectangle 2">
                         <span class="ps-3">Neffex Playlist</span>
                     </div>
-                    <div class="playlist_item col-3 m-2 p-0">
+                    <div class="playlist_item col-12 col-md-6 col-lg-3 d-flex justify-content-left align-items-center m-2 p-0">
                         <img src="./assets/Rectangle 3.png" alt=" Rectangle 3"><span class="ps-3">K/ DA</span>
                     </div>
-                    <div class="playlist_item col-3 m-2 p-0">
+                    <div class="playlist_item col-12 col-md-6 col-lg-3 d-flex justify-content-left align-items-center m-2 p-0">
                         <img src="./assets/Rectangle 4.png" alt=" Rectangle 4"><span class="ps-3">Dance / Electronic
                             Mix</span>
                     </div>
@@ -172,8 +172,8 @@
                     <h4>Shows you might like</h4>
                     <a href="#">SEE ALL</a>
                 </div>
-                <div id="plalistGrid" class="row justify-content-around">
-                    <div class="card col-2">
+                <div id="plalistGrid" class="row flex-wrap">
+                    <div class="card">
                         <img src="./assets/Rectangle 16.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Weekly Motivatio...</h5>
@@ -181,7 +181,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (1).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">MEDITATION SELF</h5>
@@ -189,7 +189,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (2).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Words beyond act...</h5>
@@ -197,7 +197,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (3).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The Alexa Show</h5>
@@ -205,7 +205,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (3).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The Alexa Show</h5>
@@ -213,7 +213,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (3).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The Alexa Show</h5>
@@ -221,7 +221,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (3).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The Alexa Show</h5>
@@ -229,7 +229,7 @@
                         </div>
 
                     </div>
-                    <div class="card col-2">
+                    <div class="card">
                         <img src="./assets/Rectangle 16 (3).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">The Alexa Show</h5>
