--- a/playlist.html
+++ b/playlist.html
@@ -84,7 +84,7 @@
 
         <main>
             <section id="playing_song" class="d-flex align-items-center mt-5">
-                <img src="./assets/스크린샷 2021-03-16 오후 4.04 2.png" alt="pop right now image">
+                <img src="./assets/dua_lipa.png" alt="pop right now image">
                 <div>
                     <div >
                         <p>PLAYLIST</p>
